# operon-app

./: .gitignore  .vercelignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
apps/backend/routers/: health.py  parse.py
apps/backend/services/: dag.py  pipeline.py
apps/frontend/: .env.example  README.md  next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json
apps/frontend/src/actions/: auth.ts  projects.ts
apps/frontend/src/app/: globals.css  layout.tsx
apps/frontend/src/app/(auth)/: layout.tsx
apps/frontend/src/app/(dashboard)/: layout.tsx
apps/frontend/src/components/: providers.tsx
apps/frontend/src/components/auth/: auth-form.tsx
apps/frontend/src/components/brand/: logo-mark.tsx
apps/frontend/src/components/layout/: app-sidebar.tsx  dashboard-header.tsx  sidebar-auto-collapse.tsx  sidebar-brand.tsx
apps/frontend/src/components/pipeline/: canvas.tsx  deletable-edge.tsx  editor-toolbar.tsx  node-context-menu.tsx  node-palette.tsx  submit-button.tsx
apps/frontend/src/components/projects/: project-table.tsx  projects-empty-state.tsx  projects-page-client.tsx
apps/frontend/src/components/ui/: app-modal.tsx  confirm-dialog.tsx
apps/frontend/src/hooks/: use-mobile.ts  use-projects.ts  use-unsaved-changes-guard.tsx
apps/frontend/src/lib/: api.ts  backend-url.ts  brand.ts
apps/frontend/src/stores/: pipeline-store.ts
supabase/migrations/: 20260530120000_create_projects.sql
(+11 files in other folders)
