[project]
name = "backend"
version = "0.1.0"
description = "Operon Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.15",
]

[tool.vercel]
entrypoint = "main:app"
